UY-1176 target Java version set to 11